fix(Dl): ensure horizontal wrap no matter what available space (#1965)
The current approach did not work always. When the parent space where to wide, it did not wrap.
The new approach does do it. Here is my testing case: https://codesandbox.io/s/eufemia-timeline-example-4x7u7n?file=/src/App.tsx

It should not have any impact on our existing visual tests.

--- a/packages/dnb-eufemia/src/style/elements/lists.scss
+++ b/packages/dnb-eufemia/src/style/elements/lists.scss
@@ -167,7 +167,7 @@
     }
 
     dd#{&}__item {
-      width: 100%;
+      flex-basis: 100%; // ensures we always break to a new line, no matter what the available space is
       height: 0;
       margin: 0;
     }
